Update favicon to use WeFore logo

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="/images/logo.png" />
     <title>WeFore | Social Media Marketing Agency</title>
     <meta name="description" content="WeFore is a premium social media marketing agency that creates viral reels, stunning posters, and campaigns that convert. Transform your brand's social presence today." />
     <meta name="author" content="WeFore" />
