--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" href="/images/logo.png" />
+  <link rel="apple-touch-icon" href="/images/logo.png" />
+  <link rel="shortcut icon" href="/images/logo.png" type="image/png" />
   <title>WeFore | Social Media Marketing Agency</title>
   <meta name="description"
     content="WeFore is a premium social media marketing agency that creates viral reels, stunning posters, and campaigns that convert. Transform your brand's social presence today." />
@@ -16,14 +18,14 @@
   <meta property="og:description"
     content="Premium social media marketing agency creating viral content and campaigns that drive results." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://weforemediaoffical.vercel.app/images/logo.png" />
+  <meta property="og:image" content="logo.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@WeFore" />
   <meta name="twitter:title" content="WeFore | Social Media Marketing That Converts" />
   <meta name="twitter:description"
     content="Premium social media marketing agency creating viral content and campaigns that drive results." />
-  <meta name="twitter:image" content="https://weforemediaoffical.vercel.app/images/logo.png" />
+  <meta name="twitter:image" content="https://weforemediaoffical.vercel.app/images/wefore-og-image.png" />
 
   <link rel="canonical" href="https://weforemediaoffical.vercel.app" />
 </head>
