--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <meta name="twitter:title" content="WeFore | Social Media Marketing That Converts" />
   <meta name="twitter:description"
     content="Premium social media marketing agency creating viral content and campaigns that drive results." />
-  <meta name="twitter:image" content="https://weforemediaoffical.vercel.app/images/wefore-og-image.png" />
+  <meta name="twitter:image" content="logo.png" />
 
   <link rel="canonical" href="https://weforemediaoffical.vercel.app" />
 </head>
