--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <meta property="og:description"
     content="Premium social media marketing agency creating viral content and campaigns that drive results." />
   <meta property="og:type" content="website" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
   <meta property="og:image" content="logo.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
