--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
   <meta property="og:type" content="website" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-  <meta property="og:image" content="logo.png" />
+  <meta property="og:image" content="https://weforemediaoffical.vercel.app/images/wefore-og-image.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@WeFore" />
   <meta name="twitter:title" content="WeFore | Social Media Marketing That Converts" />
   <meta name="twitter:description"
     content="Premium social media marketing agency creating viral content and campaigns that drive results." />
-  <meta name="twitter:image" content="logo.png" />
+  <meta name="twitter:image" content="https://weforemediaoffical.vercel.app/images/wefore-og-image.png" />
 
   <link rel="canonical" href="https://weforemediaoffical.vercel.app" />
 </head>
